# s3-as-drive

./: README.md  app.go  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  vite.config.ts  wails.json
backend/service/: config_service.go  file_service.go
backend/services/: config_service.go  file_service.go  sync_dir_service.go
backend/types/: pojo.go
backend/utils/: config_util.go  db_util.go  file_util.go  s3_util.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/router/: index.ts
frontend/src/views/: About.vue  Config.vue  FileBrowser.vue  Home.vue  SyncDir.vue
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
frontend/wailsjs/go/service/: ConfigService.d.ts  ConfigService.js  FileService.d.ts  FileService.js
frontend/wailsjs/go/services/: ConfigService.js  FileService.js  SyncDirService.d.ts  SyncDirService.js
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  minio.rs
src/components/: Greet.vue
src/router/: index.ts
src/views/: FileBrowser.vue  Home.vue
src/views/settings/: S3.vue  Settings.vue
types/: config.go  pojo.go  result.go
utils/: file_util.go
