[package]
name = "s3-as-drive"
version = "0.0.0"
description = "把 s3 包装成私有云盘"
authors = ["songxychina@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
minio = "0.1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
